--- a/docs/cloud/ai-agents/governance-agent.mdx
+++ b/docs/cloud/ai-agents/governance-agent.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "Governance AI agent"
 icon: "tags"
 ---
 
-<Card title="Learn more about Ella's full set of AI agents" icon="droplet" href="/cloud/ai-agents/overview" horizontal="true">
+<Card title="Learn more about Ella's full set of AI agents" icon="sparkles" href="/cloud/ai-agents/overview" horizontal="true">
 </Card>
 
 **Governing your data isn’t just about internal organization, it’s the key to making your data reliably usable by both humans and AI.** 
