--- a/docs/cloud/ai-agents/performance-cost-agent.mdx
+++ b/docs/cloud/ai-agents/performance-cost-agent.mdx
@@ -4,6 +4,9 @@ sidebarTitle: "Performance & cost AI agent"
 icon: "comments-dollar"
 ---
 
+<Card title="Learn more about Ella's full set of AI agents" icon="sparkles" href="/cloud/ai-agents/overview" horizontal="true">
+</Card>
+
 _Coming soon_
 
 **Optimize long-running queries, eliminate bottlenecks, and keep compute costs under control without digging through logs or rewriting SQL by hand.** The Performance and Cost Agent helps you identify inefficiencies in your pipelines and resolve them quickly, so your data stays fresh, fast, and within budget.
