--- a/docs/cloud/ai-agents/triage-resolution-agent.mdx
+++ b/docs/cloud/ai-agents/triage-resolution-agent.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "Triage & resolution AI agent"
 icon: "toolbox"
 ---
 
-<Card title="Learn more about Ella's full set of AI agents" icon="droplet" href="/cloud/ai-agents/overview" horizontal="true">
+<Card title="Learn more about Ella's full set of AI agents" icon="sparkles" href="/cloud/ai-agents/overview" horizontal="true">
 </Card>
 
 **Automates root cause analysis, clarifies the impact, and suggests actionable fixes so you spend less time triaging and more time solving what matters.** The result is a shift from manual investigation to a faster, more focused workflow, allowing you to focus on delivering business value rather than fighting fires.
