--- a/docs/cloud/ai-agents/overview.mdx
+++ b/docs/cloud/ai-agents/overview.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Ella: Elementary's AI Agents"
 sidebarTitle: "Ella: AI agents"
-icon: "magic"
+icon: "sparkles"
 ---
 
 **Ella is the intelligence layer that eliminates manual workflows and accelerates how data teams work.**
