add ai agents pages to index

--- a/docs/cloud/ai-agents/performance-cost-agent.mdx
+++ b/docs/cloud/ai-agents/performance-cost-agent.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Performance & Cost AI Agent"
-sidebarTitle: "Performance & cost AI agent"
+sidebarTitle: "Performance & cost agent"
 icon: "comments-dollar"
 ---
 
