--- a/docs/cloud/ai-agents/test-recommendation-agent.mdx
+++ b/docs/cloud/ai-agents/test-recommendation-agent.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Test Recommendation AI Agent"
-sidebarTitle: "Test recommendation AI agent"
+title: "Test Recommendation AI Agent (Beta)"
+sidebarTitle: "Test recommendation agent"
 icon: "vial-circle-check"
 ---
 
