--- a/docs/cloud/ai-agents/triage-resolution-agent.mdx
+++ b/docs/cloud/ai-agents/triage-resolution-agent.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Triage & Resolution AI Agent"
-sidebarTitle: "Triage & resolution AI agent"
+title: "Triage & Resolution AI Agent (Beta)"
+sidebarTitle: "Triage & resolution agent"
 icon: "toolbox"
 ---
 
