--- a/docs/cloud/ai-agents/governance-agent.mdx
+++ b/docs/cloud/ai-agents/governance-agent.mdx
@@ -1,11 +1,13 @@
 ---
 title: "Governance AI Agent"
-sidebarTitle: "Governance AI agent"
+sidebarTitle: "Governance agent"
 icon: "tags"
 ---
 
 <Card title="Learn more about Ella's full set of AI agents" icon="sparkles" href="/cloud/ai-agents/overview" horizontal="true">
 </Card>
+
+_Coming soon_
 
 **Governing your data isn’t just about internal organization, it’s the key to making your data reliably usable by both humans and AI.** 
 
