--- a/docs/cloud/integrations/security-and-connectivity/okta.mdx
+++ b/docs/cloud/integrations/security-and-connectivity/okta.mdx
@@ -79,11 +79,11 @@ Please follow the steps below to configure SCIM provisioning within Elementary:
 A new Provisioning tab should appear, click it and then click Edit.
 <img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1749030738/okta8_hg0vhe.png" />
 - Please fill the following details:
-    - **SCIM connector base URL** - <value from 1password link above>
+    - **SCIM connector base URL** - _value from 1password link above_
     - **Unique identifier field for users** - email
     - **Supported provisioning actions**  - mark all the “Push” settings (New users, Profile updates and Groups).
     - **Authentication Mode -** HTTP Header
-        - **Authorization** - <access token from 1password link above>
+        - **Authorization** - _access token from 1password link above_
     
     When you are done, click on **Test Connector Configuration**
 <img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1749030737/okta9_nooz3a.png" />
