--- a/docs/_snippets/cli/clickhouse-cli.mdx
+++ b/docs/_snippets/cli/clickhouse-cli.mdx
@@ -28,6 +28,8 @@ elementary:
       # sslmode: [optional, set the sslmode used to connect to the database]
 ```
 
+Note: Anomaly detection is not supported for Clickhouse.
+
 We support the same format and connection methods (user password, key pair authentication, SSO) as dbt. Please refer to
 dbt's documentation of [Clickhouse profile](https://docs.getdbt.com/reference/warehouse-setups/clickhouse-setup) for
 further details.
