added clickhouse cloud docs

--- a/docs/_snippets/oss/adapters-cards.mdx
+++ b/docs/_snippets/oss/adapters-cards.mdx
@@ -247,7 +247,7 @@
     }
   ></Card>
   <Card
-    title={<span>dbt-clickhouse <span style={{ fontSize: '0.8em', color: '#666', fontStyle: 'italic' }}>(partial support)</span></span>}
+    title="dbt-clickhouse"
     icon={
       <svg height="35" viewBox="0 0 9 8" width="40" xmlns="http://www.w3.org/2000/svg"><path d="m0 7h1v1h-1z" fill="#f00"/><path d="m0 0h1v7h-1zm2 0h1v8h-1zm2 0h1v8h-1zm2 0h1v8h-1zm2 3.25h1v1.5h-1z" fill="#fc0"/></svg>
     }
