--- a/docs/_snippets/cloud/integrations/clickhouse.mdx
+++ b/docs/_snippets/cloud/integrations/clickhouse.mdx
@@ -6,7 +6,7 @@ You will connect Elementary Cloud to Clickhouse for syncing the Elementary schem
 
 Provide the following fields:
 
-- **Host**: The hostname of your Clickhouse account to connect to. This can either be a hostname or an IP address.
+- **Host**: The hostname of your Clickhouse account to connect to. This can either be an IP address or a hostname.
 - **Port**: The port of your Clickhouse account to connect to. This is usually `8123`.
 - **Elementary schema**: The name of your Elementary schema. Usually `[schema name]_elementary`.
 - **User**: The name of the for Elementary user.
