--- a/docs/cloud/features/collaboration-and-communication/catalog.mdx
+++ b/docs/cloud/features/collaboration-and-communication/catalog.mdx
@@ -6,7 +6,7 @@ title: "Data Catalog"
 
 The Elementary Cloud catalog is a dynamic workspace for managing data assets. It combines your dbt models, sources, columns, tests, and metrics with metadata, test results, and ownership in one place.
 
-Teams use the catalog to document their assets, assign owners, monitor test and freshness status, and raise issues or questions. It’s designed for collaboration, so everyone—from data engineers to analysts and business users—can find the context they need and keep shared knowledge up to date.
+Teams use the catalog to document their assets, assign owners, monitor test and freshness status, and raise issues or questions. It’s designed for collaboration, so everyone, from data engineers to analysts and business users, can find the context they need and keep shared knowledge up to date.
 
 From each dataset, you can navigate directly to its lineage and test results, ensuring seamless exploration of data dependencies and quality insights.
 
@@ -19,7 +19,6 @@ From each dataset, you can navigate directly to its lineage and test results, en
   src="https://res.cloudinary.com/dvmtceykh/video/upload/v1740567475/catalog_tnroqf.mp4"
 ></video>
 
-What You’ll See in the Catalog
 The catalog provides a unified view of the assets in your dbt project:
 - Models and sources, with associated metadata
 - Test results for each asset
@@ -54,6 +53,6 @@ View upstream and downstream dependencies for each dataset, and export the full 
 
 ### AI Agents for Discovery and Governance
 Elementary includes two agents that use the catalog to support your team:
-- The [catalog agent](/cloud/ai-agents/catalog-agent) helps users find relevant models, columns, or metrics using natural language. This is especially helpful for new team members or business users who are less familiar with your dbt structure.
-- The [governance agent](/cloud/ai-agents/governance-agent) identifies missing documentation, unowned assets, or inconsistent tags. It surfaces these issues automatically and can suggest actions to improve coverage.
+- The [Catalog agent](/cloud/ai-agents/catalog-agent) helps users find relevant models, columns, or metrics using natural language. This is especially helpful for new team members or business users who are less familiar with your dbt structure.
+- The [Governance agent](/cloud/ai-agents/governance-agent) identifies missing documentation, unowned assets, or inconsistent tags. It surfaces these issues automatically and can suggest actions to improve coverage.
 These agents run continuously and help keep the catalog useful and complete without requiring constant manual work.
