--- a/docs/cloud/features/data-governance/critical_assets.mdx
+++ b/docs/cloud/features/data-governance/critical_assets.mdx
@@ -4,14 +4,14 @@ title: "Critical Assets"
 
 ### **What is a Critical Asset?**
 
-A critical asset is **any data asset (such as a model, exposure, or report) that plays a crucial role in your company's data ecosystem**. Issues affecting these assets can have a significant impact on business operations, dashboards, and decision-making.
+A critical asset is any data asset (such as a model, exposure, or report) that plays a crucial role in your company's data ecosystem. Issues affecting these assets can have a significant impact on business operations, dashboards, and decision-making.
 
-Marking an asset as **critical** ensures it receives **higher priority in monitoring and alerting**, helping you quickly identify and respond to issues that may impact it.
+Marking an asset as **critical** ensures it receives higher priority in monitoring and alerting, helping you quickly identify and respond to issues that may impact it.
 
 <img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1740054762/u2rcaavqxmaa2ctg09wz.png" />
 
 
-## **What Should Be Set as a Critical Asset?**
+## What Should Be Set as a Critical Asset?
 
 You should mark an asset as **critical** if:
 
@@ -20,7 +20,7 @@ You should mark an asset as **critical** if:
 - It is frequently used by **multiple teams or stakeholders**.
 - Its failure or inaccuracy could cause **significant business or operational risks**
 
-## **Why Should I Define My Critical Assets?**
+## Why Should I Define My Critical Assets?
 
 Defining your **critical assets** helps you:
 
@@ -29,7 +29,7 @@ Defining your **critical assets** helps you:
 - **Improve data reliability**– Ensure key stakeholders have access to accurate and up-to-date data by monitoring critical assets more effectively.
 - **Enhance observability**– Gain better visibility into the health of your most important assets through prioritized monitoring and alerting.
 
-## **How to Set a Critical Asset?**
+## How to Set a Critical Asset?
 
 You can mark an asset as **critical** directly in the UI:
 
@@ -47,7 +47,7 @@ Once an asset is marked as critical, **alerts will now highlight any issues that
   src="https://res.cloudinary.com/do5hrgokq/video/upload/v1740054626/ytn1zs2r0c0r5btqqnfy.mp4"
 ></video>
 
-## **Where Can You See Critical Assets?**
+## Where Can You See Critical Assets?
 
 Once an asset is marked as **critical**, you will be able to:
 
@@ -58,11 +58,4 @@ Once an asset is marked as **critical**, you will be able to:
 
 <img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1744804630/critical-asset-filter.gif" />
 
-## **Test Coverage Analysis (Coming Soon)**
-
-In upcoming releases, we will introduce **test coverage analysis** based on the monitoring state of your assets across key data quality dimensions. This feature will help you:
-
-- **Identify gaps** in monitoring and testing coverage for your most important assets and their upstream dependencies.
-- **Ensure that key data components** are properly monitored and continuously observed to maintain data reliability.
-
-By carefully selecting **which assets to mark as critical**, you can quickly detect and prioritize issues that impact your most important data, reducing disruptions, improving reliability, and keeping key stakeholders informed.
+By carefully selecting which assets to mark as critical, you can quickly detect and prioritize issues that impact your most important data, reducing disruptions, improving reliability, and keeping key stakeholders informed.
