--- a/docs/cloud/features/collaboration-and-communication/catalog.mdx
+++ b/docs/cloud/features/collaboration-and-communication/catalog.mdx
@@ -44,8 +44,9 @@ All metadata edits are synced back into your dbt project as a pull request, so d
 
 Need to display additional metadata fields from your dbt `meta` config? Reach out to our team to customize the catalog with fields that best fit your data workflows.
 
-### Critical Asset Tagging
-Mark key datasets as critical to highlight their importance and prioritize monitoring efforts. Read more [here](/cloud/features/data-governance/critical_assets).
+### Marking Critical Assets
+You can mark assets as critical directly in the catalog to highlight their importance. Critical assets are prioritized in monitoring and surfaced in governance views to help teams focus on what matters most. Read more [here](/cloud/features/data-governance/critical_assets).
+<img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1740054762/u2rcaavqxmaa2ctg09wz.png" />
 
 ### Lineage & Dependency Export
 View upstream and downstream dependencies for each dataset, and export the full dependency list as a CSV for further analysis or documentation.
