--- a/docs/_snippets/guides/alerts-code-configuration.mdx
+++ b/docs/_snippets/guides/alerts-code-configuration.mdx
@@ -1,5 +1,5 @@
 You can enrich your alerts by adding properties to tests, models and sources in your `.yml` files.
-The supported attributes are: [owner](./alerts-code-configuration/#owner),
+The supported attributes are: [owner](#owner),
 [subscribers](./alerts-code-configuration#subscribers),
 [description](./alerts-code-configuration#test-description),
 [tags](./alerts-code-configuration#tags).
