--- a/docs/_snippets/guides/alerts-code-configuration.mdx
+++ b/docs/_snippets/guides/alerts-code-configuration.mdx
@@ -1,14 +1,14 @@
 You can enrich your alerts by adding properties to tests, models and sources in your `.yml` files.
 The supported attributes are: [owner](#owner),
-[subscribers](./alerts-code-configuration#subscribers),
-[description](./alerts-code-configuration#test-description),
-[tags](./alerts-code-configuration#tags).
+[subscribers](#subscribers),
+[description](#test-description),
+[tags](#tags).
 
 You can configure and customize your alerts by configuring:
-[custom channel](./alerts-code-configuration#custom-channel),
-[suppression interval](./alerts-code-configuration#suppression-interval),
-[alert fields](./alerts-code-configuration#alert-fields)(for test alerts only), [alert grouping](./alerts-code-configuration#group-alerts-by-table),
-[alert filters](./alerts-code-configuration#filter-alerts).
+[custom channel](#custom-channel),
+[suppression interval](#suppression-interval),
+[alert fields](#alert-fields)(for test alerts only), [alert grouping](#group-alerts-by-table),
+[alert filters](#filter-alerts).
 
 ## Alert properties in `.yml` files
 
