--- a/docs/_snippets/guides/alerts-code-configuration.mdx
+++ b/docs/_snippets/guides/alerts-code-configuration.mdx
@@ -1,8 +1,8 @@
 You can enrich your alerts by adding properties to tests, models and sources in your `.yml` files.
-The supported attributes are: [owner](#owner),
-[subscribers](#subscribers),
-[description](#test-description),
-[tags](#tags).
+The supported attributes are: [owner](#Owner),
+[subscribers](#Subscribers),
+[description](#Test-description),
+[tags](#Tags).
 
 You can configure and customize your alerts by configuring:
 [custom channel](#custom-channel),
