--- a/docs/_snippets/guides/alerts-code-configuration.mdx
+++ b/docs/_snippets/guides/alerts-code-configuration.mdx
@@ -5,10 +5,10 @@ The supported attributes are: [owner](#Owner),
 [tags](#Tags).
 
 You can configure and customize your alerts by configuring:
-[custom channel](#custom-channel),
-[suppression interval](#suppression-interval),
-[alert fields](#alert-fields)(for test alerts only), [alert grouping](#group-alerts-by-table),
-[alert filters](#filter-alerts).
+[custom channel](#Custom-channel),
+[suppression interval](#Suppression-interval),
+[alert fields](#Alert-fields)(for test alerts only), [alert grouping](#Group-alerts-by-table),
+[alert filters](#Filter-alerts).
 
 ## Alert properties in `.yml` files
 
