--- a/docs/data-tests/dbt/dbt-artifacts.mdx
+++ b/docs/data-tests/dbt/dbt-artifacts.mdx
@@ -77,3 +77,8 @@ Each time the model is executed, the data is replaced with data from the project
 
 Data about all the columns that are documented in the yml files. Each row contains information about the properties of a single column, including data type and description.
 Each time the model is executed, the data is replaced with data from the project's current graph.
+
+### dbt_groups
+
+Data about the groups configured in the project and project packages. Each row contains information about the properties of a single group, including columns like group name and owner.
+Each time the model is executed, the data is replaced with data from the project's current graph.
