--- a/docs/data-tests/dbt/package-models.mdx
+++ b/docs/data-tests/dbt/package-models.mdx
@@ -122,6 +122,13 @@ Metadata about all the snapshots in the project and project packages.
 Each row contains information about the properties of a single snapshot, including columns like tags, owner, depends_on,
 and description.
 
+### dbt_groups
+
+_Table_
+
+Metadata about the groups configured in the project and project packages.
+Each row contains information about the properties of a single group, including columns like group name and owner.
+
 ## Alerts views
 
 ### alerts_dbt_models
