add alert management docs

--- a/docs/cloud/features/alerts-and-incidents/alert-destinations.mdx
+++ b/docs/cloud/features/alerts-and-incidents/alert-destinations.mdx
@@ -15,6 +15,7 @@ This makes it easy to understand how alerts are routed, reduce noise, and manage
       alt="Alert destinations management"
     />
   </div>
+</Frame>
 
 ## What You Can See
 
