add alert management docs

--- a/docs/cloud/features/alerts-and-incidents/alert-destinations.mdx
+++ b/docs/cloud/features/alerts-and-incidents/alert-destinations.mdx
@@ -2,15 +2,13 @@
 title: Alerts destinations management
 sidebarTitle: Alerts destinations management
 ---
-The Alert Destinations tab helps you control where alerts are sent for each test—directly from the test configuration page or the test side panel.
+The Alert Destinations tab helps you control where alerts are sent for each test, directly from the test configuration page or the test side panel.
 
 This makes it easy to understand how alerts are routed, reduce noise, and manage settings without switching contexts.
 
 <Frame>
   <div className="dark:bg-white rounded-md p-4">
     <img
-      height="400"
-      width="400"
       src="https://res.cloudinary.com/do5hrgokq/image/upload/v1751189843/alertdestinations_fljb4q.png"
       alt="Alert destinations management"
     />
@@ -33,4 +31,4 @@ You’ll have full visibility into how alerts for a specific test are managed.
 - **Enable or disable alerts** for individual tests or in bulk
 - **Override alert destinations** in bulk for faster configuration updates **(Coming Soon)**
 
-This feature makes it easier to manage alert delivery and ensure alerts are routed as expected—especially across different teams, environments, or test types.
+This feature makes it easier to manage alert delivery and ensure alerts are routed as expected, especially across different teams or test types.
