--- a/docs/cloud/features/alerts-and-incidents/alert-configuration.mdx
+++ b/docs/cloud/features/alerts-and-incidents/alert-configuration.mdx
@@ -2,11 +2,15 @@
 title: "Alert configuration"
 ---
 
-<CardGroup cols={2}>
+<CardGroup cols={3}>
   <Card title="Alerts rules" icon="cloud" iconType="solid" href="/cloud/features/alerts-and-incidents/alert-rules">
     Use Alert Rules to distribute your alerts to the right channels.
   </Card>
   <Card title="Alerts configuration in code" icon="code" iconType="solid" href="/cloud/guides/alerts-configuration">
     Alert content and properties configuration as code in your project YML files.
   </Card>
+  <Card title="Managing alert destinations per test" icon="code" iconType="solid" href="/cloud/features/alerts-and-incidents/alert-destinations">
+    Alert content and properties configuration as code in your project YML files.
+  </Card>
+
 </CardGroup>
