--- a/docs/cloud/features/alerts-and-incidents/alert-configuration.mdx
+++ b/docs/cloud/features/alerts-and-incidents/alert-configuration.mdx
@@ -9,7 +9,7 @@ title: "Alert configuration"
   <Card title="Alerts configuration in code" icon="code" iconType="solid" href="/cloud/guides/alerts-configuration">
     Alert content and properties configuration as code in your project YML files.
   </Card>
-  <Card title="Managing alert destinations per test" icon="code" iconType="solid" href="/cloud/features/alerts-and-incidents/alert-destinations">
+  <Card title="Managing alert destinations" icon="bell" iconType="solid" href="/cloud/features/alerts-and-incidents/alert-destinations">
     Alert content and properties configuration as code in your project YML files.
   </Card>
 
