--- a/docs/cloud/features/alerts-and-incidents/alert-configuration.mdx
+++ b/docs/cloud/features/alerts-and-incidents/alert-configuration.mdx
@@ -4,13 +4,13 @@ title: "Alert configuration"
 
 <CardGroup cols={3}>
   <Card title="Alerts rules" icon="cloud" iconType="solid" href="/cloud/features/alerts-and-incidents/alert-rules">
-    Use Alert Rules to distribute your alerts to the right channels.
+    Set up alert rules to automatically route alerts to the relevant channels according to the logic you define.
   </Card>
   <Card title="Alerts configuration in code" icon="code" iconType="solid" href="/cloud/guides/alerts-configuration">
-    Alert content and properties configuration as code in your project YML files.
+    Configure alert content and properties as code in your project YML files.
   </Card>
   <Card title="Managing alert destinations" icon="bell" iconType="solid" href="/cloud/features/alerts-and-incidents/alert-destinations">
-    Alert content and properties configuration as code in your project YML files.
+    Observe and control the alert destination of each test.
   </Card>
 
 </CardGroup>
