--- a/docs/cloud/features/alerts-and-incidents/alerts-and-incidents-overview.mdx
+++ b/docs/cloud/features/alerts-and-incidents/alerts-and-incidents-overview.mdx
@@ -3,18 +3,27 @@ title: Alerts and Incidents Overview
 sidebarTitle: Alerts & incidents overview
 ---
 
-<Snippet file="cloud/cloud-feature-tag.mdx" />
-
 Alerts and incidents in Elementary are designed to shorten your time to response and time to resolution when data issues occur.
 
 - **Alert -** Notification about an event that indicates a data issue.
 - **[Incident](/cloud/features/alerts-and-incidents/incidents) -** A data issue that starts with a single event but can include multiple events grouped together. An incident includes a start time, status, severity, assignee, and end time. Incident alerts are sent when the incident is opened and when it is resolved.
 
-
-
 Alerts provide information and context for recipients to quickly triage, prioritize and resolve issues. 
 For collaboration and promoting ownership, alerts include owners and tags. 
 You can create distribution rules to route alerts to the relevant people and channels, for faster response. 
+
+
+<Frame>
+  <div className="dark:bg-white rounded-md p-4">
+    <img
+      height ="400"
+      width="400"
+      src="https://res.cloudinary.com/dvmtceykh/image/upload/v1707742279/od5lminwcmktkjfh0lao.png"
+      alt="Slack alert format"
+    />
+  </div>
+</Frame>
+
 
 An alert would either open a new incident, or be automatically grouped and added to an ongoing incident.
 From the alert itself, you can update the status and assignee of an incident. In the [incidents page](/cloud/features/alerts-and-incidents/incident-management),
