--- a/docs/cloud/features/alerts-and-incidents/alert-configuration.mdx
+++ b/docs/cloud/features/alerts-and-incidents/alert-configuration.mdx
@@ -2,7 +2,7 @@
 title: "Alert configuration"
 ---
 
-<CardGroup cols={3}>
+<CardGroup cols={2}>
   <Card title="Alerts rules" icon="cloud" iconType="solid" href="/cloud/features/alerts-and-incidents/alert-rules">
     Set up alert rules to automatically route alerts to the relevant channels according to the logic you define.
   </Card>
@@ -11,6 +11,9 @@ title: "Alert configuration"
   </Card>
   <Card title="Managing alert destinations" icon="bell" iconType="solid" href="/cloud/features/alerts-and-incidents/alert-destinations">
     Observe and control the alert destination of each test.
+  </Card>
+  <Card title="Adding owners and subscribers" icon="person-circle-plus" iconType="solid" href="/cloud/features/alerts-and-incidents/alert-destinations">
+    Take accountability over alerts with owners and subscribers, added from the UI or the code.
   </Card>
 
 </CardGroup>
