--- a/docs/cloud/features/alerts-and-incidents/owners-and-subscribers.mdx
+++ b/docs/cloud/features/alerts-and-incidents/owners-and-subscribers.mdx
@@ -2,19 +2,18 @@
 title: "Owners and subscribers"
 ---
 
-We highly recommend configuring owners and subscribers for your models and / or tests.
-an Owner is the person responsible for the model, and subscribers are the people who are interested in getting the alerts on the model or test.
+We highly recommend configuring owners and subscribers for your models and/or tests.
+An owner is the person responsible for the model, and subscribers are the people who are interested in getting the alerts on the model or test.
 Owners and subscribers will be mentioned (tagged) in the Slack alerts. Also their name will appear in the alerts and the UI.
 
+configuring owners and subscribers:
 
-In addition, Elementary UI has filters by owner and even the side tree can be grouped by owner.
+### Owners
+Owners can be easily added or edited in the Catalog screen. [Learn more about managing your assets' metadata.](/cloud/features/data-governance/manage-metadata)
 
-Owners and subscribers are configured in the dbt code:
-
-#### Owners
-
+#### Configuting owners in code:
 <Snippet file="alerts/owner.mdx" />
 
-#### Subscribers
+### Subscribers
 
 <Snippet file="alerts/subscribers.mdx" />
