--- a/docs/cloud/features/data-tests/test-coverage-screen.mdx
+++ b/docs/cloud/features/data-tests/test-coverage-screen.mdx
@@ -6,6 +6,15 @@ sidebarTitle: Managing test coverage
 The **Test Coverage screen** in the Elementary Cloud [catalog](/cloud/features/collaboration-and-communication/catalog) gives you a full picture of your data quality coverage across assets and dimensions. It’s designed to help you quickly understand where you stand and take action to improve.
 
 
+<Frame>
+  <div className="dark:bg-white rounded-md p-4">
+    <img
+      src="https://res.cloudinary.com/do5hrgokq/image/upload/v1751200105/test-coverage_dppaog.png"
+      alt="Slack alert format"
+    />
+  </div>
+</Frame>
+
 ## What It Shows
 
 Each asset is evaluated across **seven data quality dimensions**:
@@ -50,7 +59,17 @@ The first **6 core dimensions** each contribute **15%** to the total score. The 
     
     Define your own coverage criteria to better identify tables that do not meet your internal standards. This will make it easier to spot gaps and maintain consistent data quality practices.
     
-    ![image.png](attachment:7854bf6e-df51-45ef-9a33-7f8e9b4171d9:image.png)
+
+<Frame>
+  <div className="dark:bg-white rounded-md p-4">
+    <img
+      height ="400"
+      width="400"
+      src="https://res.cloudinary.com/do5hrgokq/image/upload/v1751200138/coverage-weight_xyz9gf.png"
+      alt="Slack alert format"
+    />
+  </div>
+</Frame>
     
 
 ## Test Recommendation AI Agent
