--- a/docs/cloud/main_introduction.mdx
+++ b/docs/cloud/main_introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Welcome to Elementary"
-sidebarTitle: "Introduction"
+sidebarTitle: "Elementary"
 description: "dbt-native data observability platform built for data and analytics engineers."
 icon: "fire"
 ---
